--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1739,11 +1739,11 @@
 	}
 
 	strong, b {
-		color: #555;
+		color: white;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #555;
+		color: white;
 	}
 
 	blockquote {
